--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finleap",
+  "name": "weather-monster",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage",
     "eject": "react-scripts eject",
     "test:e2e:open": "cypress open --config fileServerFolder=src/e2e",
     "test:e2e:run": "cypress run --config fileServerFolder=src/e2e"
