--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
+  slack: circleci/slack@3.4.2
 jobs:
   build-and-test:
     executor:
@@ -11,7 +12,9 @@ jobs:
           steps:
             - run: npm install
             - run: npm test
+      - slack/status:
+          only_for_branches: master
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+  build-and-test:
+    jobs:
+      - build-and-test
