--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "test:coverage": "react-scripts test --coverage",
     "eject": "react-scripts eject",
@@ -39,8 +40,10 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^3.8.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "cypress": "^3.8.0"
-  }
+    "gh-pages": "^3.0.0"
+  },
+  "homepage": "https://harman052.github.io/weather-monster/"
 }
