--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
             - run: npm install
             - run:
                 name: "Run Jest and Collect Coverage Reports"
-                command: npm test --coverage
+                command: npm test --collectCoverage=true
             - store_artifacts:
                 path: coverage
 
