--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,23 @@
 version: 2.1
-orbs:
-  node: circleci/node@1.1.6
-  slack: circleci/slack@3.4.2
+
+defaults: &defaults
+  docker:
+    - image: circleci/node:10.19.0
+  environment:
+    NODE_PATH: src/
+  working_directory: ~/repo-
+
 jobs:
   build-and-test:
-    executor:
-      name: node/default
+    <<: *defaults
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run:
-                name: "Run Jest and Collect Coverage Reports"
-                command: jest --coverage --runInBand
-            - store_artifacts:
-                path: /home/circleci/project/coverage
-
+      - run: npm install
+      - run:
+          name: "Run Jest and Collect Coverage Reports"
+          command: jest --coverage --runInBand
+      # - store_artifacts:
+      #     path: /home/circleci/project/coverage
       #       - run: npm test
       # - slack/status:
       #     fail_only: true
