--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "cypress": "^3.8.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "gh-pages": "^3.0.0"
+    "gh-pages": "^3.0.0",
+    "jest": "^26.1.0"
   },
   "homepage": "https://harman052.github.io/weather-monster/"
 }
